tests/misc/errors/flow/default-escaped.js
export asyn\u{63} from "async";
